# true-timer

./: .gitignore  HELP.md  LICENSE  README.md  build.gradle  pyproject.toml  pytest.ini  settings.gradle
alembic/: env.py
alembic/versions/: 7e3375ec20e2_first_migration_created_standard_timer_.py  7fe94c99316b_added_minutes_and_hours_field_to_.py  a7ada15d9f0a_recreated_malformed_database.py  b31a9a3c2339_improved_database_organization_and_.py  f925504778a9_updated_standard_timer_model_to_improve_.py  fd688e73cec5_added_fields_to_improve_tracking_of_.py
backend/: __init__.py  db.py  logging.py  main.py  models.py  queries.py  schemas.py
backend/deep_timer/: __init__.py
backend/interval_timer/: __init__.py
backend/pomodoro_timer/: __init__.py
backend/standard_timer/: __init__.py  queries.py  routers.py  schemas.py  services.py
frontend/: README.md  index.html
frontend/css/: style.css
frontend/js/: app.js  deep-session-timer.js  fiftyTwoSeventeen-timer.js  pomodoro-timer.js  standard-timer.js  utils.js
src/main/java/com/jbk/trueTimer/: TrueTimerApplication.java
src/main/java/com/jbk/trueTimer/config/: LocaleConfig.java
src/main/java/com/jbk/trueTimer/controllers/: PublicUserController.java
src/main/java/com/jbk/trueTimer/dto/: UserCreationDTO.java
src/main/java/com/jbk/trueTimer/entities/: BaseEntity.java  PublicUser.java
src/main/java/com/jbk/trueTimer/exceptions/: GlobalExceptionHandler.java
src/main/java/com/jbk/trueTimer/repositories/: PublicUserRepository.java
src/main/java/com/jbk/trueTimer/services/: PublicUserService.java
src/main/resources/: application.properties  logback.xml
src/main/resources/static/: index.html
src/main/resources/static/js/: app.js
src/test/java/com/jbk/trueTimer/: TrueTimerApplicationTests.java
tests/: conftest.py  test_general.py  test_standard.py
